--- a/app/views/grams/new.html.erb
+++ b/app/views/grams/new.html.erb
@@ -1,5 +1,11 @@
-<%= simple_form_for @gram do |f| %>
-  <%= f.input :picture %>
-  <%= f.input :message %>
-  <%= f.submit "Post!" %>
-<% end %>
+<div class="col-xs-offset-1 col-sm-8 col-sm-offset-2 col-md-6 col-md-offset-3 card form">
+
+  <h1>New Gram</h1>
+
+  <%= simple_form_for @gram do |f| %>
+    <%= f.input :picture %>
+    <%= f.input :message %>
+    <%= f.submit "Post!", class: 'my-btn' %>
+  <% end %>
+
+</div>
